deploy/k8s/service/customer/customer-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-svc
  namespace: shopping
  labels:
    app.kubernetes.io/name: customer-svc
    app.kubernetes.io/version: v1.0
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: customer
    app.kubernetes.io/version: v1.0
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: customer
  namespace: shopping
  labels:
    app.kubernetes.io/name: customer
    app.kubernetes.io/version: v1.0
spec:
  serviceName: customer-svc
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: customer
      app.kubernetes.io/version: v1.0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: customer
        app.kubernetes.io/version: v1.0
    spec:
        containers:
          - name: customer
            image: localhost:5000/go-shopping-poc/customer:1.0
            imagePullPolicy: Always
            ports:
               - containerPort: 8080
            readinessProbe:
              httpGet:
                path: /health
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 10
              timeoutSeconds: 5
              failureThreshold: 3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-ingress
  namespace: shopping
  labels:
    app.kubernetes.io/name: customer-ingress
    app.kubernetes.io/version: v1.0
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
spec:
  rules:
    - host: pocstore.local
      http:
        paths:
          - path: /api/v1/customers
            pathType: Prefix
            backend:
              service:
                name: customer-svc
                port:
                  number: 80
  tls:
     - hosts:
         - pocstore.local
       secretName: pocstorelocal-tls
